--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                 <p class="subtitle">Your Trusted Partner in Health and Wellness</p>
                 <p class="location">📍 Gayaza Town, Near Centenary Bank , MC 12345</p>
                 <div class="hours">
-                    🕒 Monday - Friday: 9:00 AM - 6:00 PM | Saturday: 10:00 AM - 4:00 PM | Sunday: Closed
-                </div>
+                    🕒 Sunday - Friday: 9:00 AM - 6:00 PM |    </div>
                 
                 <div class="info-grid">
                     <div class="info-card">
